<resources>
    <string name="app_name">AndroidApp</string>
    <string name="Username">Name</string>
    <string name="Password">password</string>
    <string name="Displayname">displayname</string>
    <string name="PasswordValidation">passwordValidation</string>
    <string name="Register">register</string>
    <string name="DisplayName">Display name</string>
    <string name="password">Password:</string>
    <string name="displayname">Display name:</string>
    <string name="username">Username:</string>
    <string name="repeatpassword">Repeat password:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="not_registered_click_here">Not registered? Click here</string>
    <string name="usernametext">UserName</string>
    <string name="write_message">Write message...</string>
    <string name="user_name">Username</string>
    <string name="lastmessage">LastMessage</string>
    <string name="datetime">DateTime</string>
    <string name="BaseUrl">http://10.0.2.2:25565/api/</string>
    <string name="todo">TODO</string>
</resources>