<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_register"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="282dp"
        android:layout_height="211dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.711"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#233FEF"
            android:text="@string/login"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/toRegButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="76dp"
            android:background="@color/teal_200"
            android:text="@string/not_registered_click_here"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>