<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ChatsListActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:padding="5dp"
            android:src="@drawable/logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/lastmessage" />

            <TextView
                android:id="@+id/datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/datetime" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>